# RustByExample

./: README.md
cli/: Cargo.toml
cli/src/: main.rs
custom/src/: main.rs
flowcontrol/src/: main.rs
function/src/: main.rs
generic/src/: main.rs
handlerr/: Cargo.toml
handlerr/src/: boxerr.rs  complex.rs  main.rs  result.rs  who_people.rs
hello-wasm/: Cargo.toml
hello-wasm/site/: index.js  package-lock.json  package.json
hello-wasm/src/: lib.rs
module/src/: main.rs
module/src/myy/: inaccessible.rs  mod.rs  nested.rs
ownership/src/: main.rs
ownership/src/area/: mod.rs
ownership/src/bor/: loan.rs  mod.rs
primitives/src/: main.rs
print/src/: main.rs
property/src/: main.rs
switchtype/: Cargo.toml
switchtype/src/: main.rs
typesystem/: Cargo.toml
typesystem/src/: main.rs
varbind/: Cargo.toml  main.wasm
varbind/src/: main.rs
