[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/spaidermfg/RustByExample/hello-wasm"
authors = ["488434442@qq.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
